rustdocs/errors/rust-bitcoin-hashes-src-hmac-mod.rs.txt
error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/hashes/src/hmac/mod.rs:10:5
   |
10 | use core::{convert, fmt, str};
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved imports `crate::Hash`, `crate::HashEngine`
  --> ../rust-bitcoin/hashes/src/hmac/mod.rs:15:13
   |
15 | use crate::{Hash, HashEngine};
   |             ^^^^  ^^^^^^^^^^
   |             |     |
   |             |     no `HashEngine` in the root
   |             |     help: a similar name exists in the module: `HmacEngine`
   |             no `Hash` in the root
   |
   = help: consider importing this trait instead:
           std::hash::Hash

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
